--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -32,16 +32,37 @@ const { title, description } = Astro.props;
 <!-- Font preloads -->
 <link
   rel="preload"
-  href="/fonts/atkinson-regular.woff"
+  href="/fonts/Compagnon-Bold.woff2"
   as="font"
-  type="font/woff"
+  type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/atkinson-bold.woff"
+  href="/fonts/Compagnon-Italic.woff2"
   as="font"
-  type="font/woff"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/Compagnon-Light.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/Compagnon-Medium.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="/fonts/Compagnon-Roman.woff2"
+  as="font"
+  type="font/woff2"
   crossorigin
 />
 
