--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,17 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
     <Header />
     <main>
       <h1>🧑 Hi, Friend!</h1>
+      <p>My name is <span id="name">Jose</span>.</p>
     </main>
     <Footer />
   </body>
 </html>
+
+<style>
+  #name {
+    font-weight: bold;
+    font-style: italic;
+    color: #3498db;
+    font-size: x-large;
+  }
+</style>
