--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,10 +18,10 @@
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Bold.woff2") format("woff2"),
-    url("/fonts/Compagnon-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: italic;
+  src: url("/fonts/Compagnon-Roman.woff2") format("woff2"),
+    url("/fonts/Compagnon-Roman.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -29,7 +29,7 @@
   font-family: "Compagnon";
   src: url("/fonts/Compagnon-Italic.woff2") format("woff2"),
     url("/fonts/Compagnon-Italic.woff") format("woff");
-  font-weight: lighter;
+  font-weight: 300;
   font-style: italic;
   font-display: swap;
 }
@@ -38,8 +38,17 @@
   font-family: "Compagnon";
   src: url("/fonts/Compagnon-Light.woff2") format("woff2"),
     url("/fonts/Compagnon-Light.woff") format("woff");
-  font-weight: lighter;
+  font-weight: 300;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Compagnon";
+  src: url("/fonts/Compagnon-Bold.woff2") format("woff2"),
+    url("/fonts/Compagnon-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: italic;
   font-display: swap;
 }
 
@@ -47,16 +56,7 @@
   font-family: "Compagnon";
   src: url("/fonts/Compagnon-Medium.woff2") format("woff2"),
     url("/fonts/Compagnon-Medium.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Roman.woff2") format("woff2"),
-    url("/fonts/Compagnon-Roman.woff") format("woff");
-  font-weight: normal;
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
