--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,13 +8,15 @@
   --gray-light: 229, 233, 240;
   --gray-dark: 34, 41, 57;
   --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
-    0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+  --box-shadow:
+    0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
+    0 16px 32px rgba(var(--gray), 33%);
 }
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Roman.woff2") format("woff2"),
+  src:
+    url("/fonts/Compagnon-Roman.woff2") format("woff2"),
     url("/fonts/Compagnon-Roman.woff") format("woff");
   font-weight: 400;
   font-style: normal;
@@ -23,7 +25,8 @@
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Italic.woff2") format("woff2"),
+  src:
+    url("/fonts/Compagnon-Italic.woff2") format("woff2"),
     url("/fonts/Compagnon-Italic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
@@ -32,7 +35,8 @@
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Light.woff2") format("woff2"),
+  src:
+    url("/fonts/Compagnon-Light.woff2") format("woff2"),
     url("/fonts/Compagnon-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
@@ -41,7 +45,8 @@
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Bold.woff2") format("woff2"),
+  src:
+    url("/fonts/Compagnon-Bold.woff2") format("woff2"),
     url("/fonts/Compagnon-Bold.woff") format("woff");
   font-weight: 700;
   font-style: italic;
@@ -50,7 +55,8 @@
 
 @font-face {
   font-family: "Compagnon";
-  src: url("/fonts/Compagnon-Medium.woff2") format("woff2"),
+  src:
+    url("/fonts/Compagnon-Medium.woff2") format("woff2"),
     url("/fonts/Compagnon-Medium.woff") format("woff");
   font-weight: 700;
   font-style: normal;
