--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
     <Header />
     <main>
       <h1>🧑 Hi, Friend!</h1>
-      <p class="bg-amber-400 px-4">My name is <span id="name">Jose</span>.</p>
+      <p class="bg-primary px-4">My name is <span id="name">Jose</span>.</p>
     </main>
     <Footer />
   </body>
