--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,17 +1,6 @@
 @import "tailwindcss";
 
-:root {
-  --accent: #2337ff;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
-  --gray: 96, 115, 159;
-  --gray-light: 229, 233, 240;
-  --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow:
-    0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
-    0 16px 32px rgba(var(--gray), 33%);
-}
+@custom-variant dark (&:is(.dark *));
 
 @font-face {
   font-family: "Compagnon";
@@ -63,132 +52,184 @@
   font-display: swap;
 }
 
-body {
-  font-family: "Compagnon", sans-serif;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
-  background-size: 100% 600px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  color: rgb(var(--gray-dark));
-  font-size: 20px;
-  line-height: 1.7;
+:root {
+  --background: oklch(0.9824 0.0013 286.3757);
+  --foreground: oklch(0.3563 0.052 181.7481);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.3211 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.3211 0 0);
+  --primary: oklch(0.7978 0.2046 153.0604);
+  --primary-foreground: oklch(0 0 0);
+  --secondary: oklch(0.5921 0.2502 346.5346);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.8917 0.0484 333.5163);
+  --muted-foreground: oklch(0.4856 0.0171 107.0202);
+  --accent: oklch(0.8269 0.108 211.9627);
+  --accent-foreground: oklch(0 0 0);
+  --destructive: oklch(0.5867 0.2299 29.4595);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.8699 0 0);
+  --input: oklch(0.8699 0 0);
+  --ring: oklch(0.7978 0.2046 153.0604);
+  --chart-1: oklch(0.6487 0.1538 150.3071);
+  --chart-2: oklch(0.6746 0.1414 261.338);
+  --chart-3: oklch(0.8269 0.108 211.9627);
+  --chart-4: oklch(0.588 0.0993 245.7394);
+  --chart-5: oklch(0.5905 0.1608 148.2409);
+  --sidebar: oklch(0.9824 0.0013 286.3757);
+  --sidebar-foreground: oklch(0.3211 0 0);
+  --sidebar-primary: oklch(0.7978 0.2046 153.0604);
+  --sidebar-primary-foreground: oklch(0 0 0);
+  --sidebar-accent: oklch(0.8269 0.108 211.9627);
+  --sidebar-accent-foreground: oklch(0.3211 0 0);
+  --sidebar-border: oklch(0.8699 0 0);
+  --sidebar-ring: oklch(0.7978 0.2046 153.0604);
+  --font-sans: Compagnon, Fira Sans, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: STIX Two Text, ui-serif, serif;
+  --font-mono: Fira Code, ui-monospace, monospace;
+  --radius: 0.25rem;
+  --shadow-x: 4px;
+  --shadow-y: 4px;
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 1;
+  --shadow-color: #16453e;
+  --shadow-2xs: 4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 0.5);
+  --shadow-xs: 4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 0.5);
+  --shadow-sm:
+    4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 1),
+    4px 1px 2px -1px hsl(171.0638 51.6484% 17.8431% / 1);
+  --shadow:
+    4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 1),
+    4px 1px 2px -1px hsl(171.0638 51.6484% 17.8431% / 1);
+  --shadow-md:
+    4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 1),
+    4px 2px 4px -1px hsl(171.0638 51.6484% 17.8431% / 1);
+  --shadow-lg:
+    4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 1),
+    4px 4px 6px -1px hsl(171.0638 51.6484% 17.8431% / 1);
+  --shadow-xl:
+    4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 1),
+    4px 8px 10px -1px hsl(171.0638 51.6484% 17.8431% / 1);
+  --shadow-2xl: 4px 4px 0px 0px hsl(171.0638 51.6484% 17.8431% / 2.5);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
 }
 
-main {
-  width: 720px;
-  max-width: calc(100% - 2em);
-  margin: auto;
-  padding: 3em 1em;
+.dark {
+  --background: oklch(0.2303 0.0125 264.2926);
+  --foreground: oklch(0.9927 0.0364 107.0448);
+  --card: oklch(0.321 0.0078 223.6661);
+  --card-foreground: oklch(0.9219 0 0);
+  --popover: oklch(0.321 0.0078 223.6661);
+  --popover-foreground: oklch(0.9219 0 0);
+  --primary: oklch(0.7978 0.2046 153.0604);
+  --primary-foreground: oklch(0 0 0);
+  --secondary: oklch(0.5921 0.2502 346.5346);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.4819 0 0);
+  --muted-foreground: oklch(0.9132 0.0714 329.1088);
+  --accent: oklch(0.8269 0.108 211.9627);
+  --accent-foreground: oklch(0 0 0);
+  --destructive: oklch(0.5867 0.2299 29.4595);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.3867 0 0);
+  --input: oklch(0.3867 0 0);
+  --ring: oklch(0.7978 0.2046 153.0604);
+  --chart-1: oklch(0.6487 0.1538 150.3071);
+  --chart-2: oklch(0.588 0.0993 245.7394);
+  --chart-3: oklch(0.6746 0.1414 261.338);
+  --chart-4: oklch(0.8269 0.108 211.9627);
+  --chart-5: oklch(0.5905 0.1608 148.2409);
+  --sidebar: oklch(0.2303 0.0125 264.2926);
+  --sidebar-foreground: oklch(0.9219 0 0);
+  --sidebar-primary: oklch(0.7978 0.2046 153.0604);
+  --sidebar-primary-foreground: oklch(0 0 0);
+  --sidebar-accent: oklch(0.8269 0.108 211.9627);
+  --sidebar-accent-foreground: oklch(0 0 0);
+  --sidebar-border: oklch(0.3867 0 0);
+  --sidebar-ring: oklch(0.7978 0.2046 153.0604);
+  --font-sans: Compagnon, Fira Sans, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: STIX Two Text, ui-serif, serif;
+  --font-mono: Fira Code, ui-monospace, monospace;
+  --radius: 0.25rem;
+  --shadow-x: 4px;
+  --shadow-y: 4px;
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 1;
+  --shadow-color: oklch(0 0 0);
+  --shadow-2xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.5);
+  --shadow-xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.5);
+  --shadow-sm:
+    4px 4px 0px 0px hsl(0 0% 0% / 1), 4px 1px 2px -1px hsl(0 0% 0% / 1);
+  --shadow: 4px 4px 0px 0px hsl(0 0% 0% / 1), 4px 1px 2px -1px hsl(0 0% 0% / 1);
+  --shadow-md:
+    4px 4px 0px 0px hsl(0 0% 0% / 1), 4px 2px 4px -1px hsl(0 0% 0% / 1);
+  --shadow-lg:
+    4px 4px 0px 0px hsl(0 0% 0% / 1), 4px 4px 6px -1px hsl(0 0% 0% / 1);
+  --shadow-xl:
+    4px 4px 0px 0px hsl(0 0% 0% / 1), 4px 8px 10px -1px hsl(0 0% 0% / 1);
+  --shadow-2xl: 4px 4px 0px 0px hsl(0 0% 0% / 2.5);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
-  line-height: 1.2;
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
 }
 
-h1 {
-  font-size: 3.052em;
-}
-
-h2 {
-  font-size: 2.441em;
-}
-
-h3 {
-  font-size: 1.953em;
-}
-
-h4 {
-  font-size: 1.563em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-strong,
-b {
-  font-weight: 700;
-}
-
-a {
-  color: var(--accent);
-}
-
-a:hover {
-  color: var(--accent);
-}
-
-p {
-  margin-bottom: 1em;
-}
-
-.prose p {
-  margin-bottom: 2em;
-}
-
-textarea {
-  width: 100%;
-  font-size: 16px;
-}
-
-input {
-  font-size: 16px;
-}
-
-table {
-  width: 100%;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-}
-
-code {
-  padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
-  border-radius: 2px;
-}
-
-pre {
-  padding: 1.5em;
-  border-radius: 8px;
-}
-
-pre > code {
-  all: unset;
-}
-
-blockquote {
-  border-left: 4px solid var(--accent);
-  padding: 0 0 0 20px;
-  margin: 0;
-  font-size: 1.333em;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid rgb(var(--gray-light));
-}
-
-@media (max-width: 720px) {
+@layer base {
   body {
-    font-size: 18px;
-  }
-
-  main {
-    padding: 1em;
+    letter-spacing: var(--tracking-normal);
   }
 }
 
