refactor: font folder structure, set Compagnon as default font, and remove tailwind font namespace defaults

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -32,35 +32,35 @@ const { title, description } = Astro.props;
 <!-- Font preloads -->
 <link
   rel="preload"
-  href="/fonts/Compagnon-Roman.woff2"
+  href="/fonts/Compagnon/Compagnon-Roman.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/Compagnon-Bold.woff2"
+  href="/fonts/Compagnon/Compagnon-Bold.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/Compagnon-Italic.woff2"
+  href="/fonts/Compagnon/Compagnon-Italic.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/Compagnon-Light.woff2"
+  href="/fonts/Compagnon/Compagnon-Light.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/Compagnon-Medium.woff2"
+  href="/fonts/Compagnon/Compagnon-Medium.woff2"
   as="font"
   type="font/woff2"
   crossorigin
