--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,13 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
     <main>
       <h1>🧑 Hi, Friend!</h1>
       <p class="bg-primary px-4">My name is <span id="name">Jose</span>.</p>
+      <ul class="my-4">
+        <li>Compagnon Roman</li>
+        <li class="font-light">Compagnon Light</li>  
+        <li class="italic">Compagnon Italic</li>
+        <li class="font-bold">Compagnon Bold</li>
+        <li class="font-bold italic">Compagnon Medium</li>
+      </ul>
     </main>
     <Footer />
   </body>
