--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import { Image } from "astro:assets";
 ---
 
 <header>
-  <nav>
+  <nav class="container mx-auto">
     <a href="/">
       <Image src={logo} alt="site logo" width="48" height="48" />
       <h2>{USERNAME}</h2>
