--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,9 +12,9 @@ import { Image } from "astro:assets";
       <h1 class="font-bold text-3xl leading-0">{USERNAME}</h1>
     </a>
     <div class="internal-links">
-      <HeaderLink href="/">Home</HeaderLink>
-      <HeaderLink href="/blog">Blog</HeaderLink>
-      <HeaderLink href="/about">About</HeaderLink>
+      <HeaderLink href="/blog"><h1>Blog</h1></HeaderLink>
+      <HeaderLink href="/contact"><h1>Contact</h1></HeaderLink>
+      <HeaderLink href="/resume"><h1>Resume</h1></HeaderLink>
     </div>
     <div class="social-links">
       <a href="https://github.com/jmgogo" target="_blank">
