refactor: consolidate styles on nav links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,17 +6,17 @@ import { Image } from "astro:assets";
 ---
 
 <header>
-  <nav class="container mx-auto">
-    <a href="/" class="flex gap-1.5 items-center">
+  <nav class="container mx-auto flex items-center justify-between py-4">
+    <a href="/" class="flex items-center gap-1.5">
       <Image src={logo} alt="site logo" class="size-10" />
-      <h1 class="font-bold text-3xl leading-0">{USERNAME}</h1>
+      <h1 class="text-3xl leading-0 font-bold">{USERNAME}</h1>
     </a>
-    <div class="internal-links">
+    <div>
       <HeaderLink href="/blog"><h1>Blog</h1></HeaderLink>
       <HeaderLink href="/contact"><h1>Contact</h1></HeaderLink>
       <HeaderLink href="/resume"><h1>Resume</h1></HeaderLink>
     </div>
-    <div class="social-links">
+    <div>
       <a href="https://github.com/jmgogo" target="_blank">
         <span class="sr-only">Go to Jose's GitHub repo</span>
         <svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
@@ -29,44 +29,4 @@ import { Image } from "astro:assets";
     </div>
   </nav>
 </header>
-<style>
-  header {
-    margin: 0;
-    padding: 0 1em;
-    background: white;
-    box-shadow: 0 2px 8px rgba(var(--black), 5%);
-  }
-  h2 {
-    margin: 0;
-    font-size: 1em;
-  }
 
-  h2 a,
-  h2 a.active {
-    text-decoration: none;
-  }
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  nav a {
-    padding: 1em 0.5em;
-    color: var(--black);
-    border-bottom: 4px solid transparent;
-    text-decoration: none;
-  }
-  nav a.active {
-    text-decoration: none;
-    border-bottom-color: var(--accent);
-  }
-  .social-links,
-  .social-links a {
-    display: flex;
-  }
-  @media (max-width: 720px) {
-    .social-links {
-      display: none;
-    }
-  }
-</style>
