--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -12,13 +12,20 @@ const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
   <slot />
 </a>
+
 <style>
   a {
     display: inline-block;
     text-decoration: none;
+    color: var(--black);
+    border-bottom: 4px solid transparent;
+    text-decoration: none;
   }
+
   a.active {
     font-weight: bolder;
     text-decoration: underline;
+    text-decoration: none;
+    border-bottom-color: var(--accent);
   }
 </style>
