ui: set scrollbar width to thin, and change scrollbar color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -234,6 +234,8 @@
   html {
     /* Prevent layout shift when adding/removing scrollbars */
     scrollbar-gutter: stable;
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-foreground) var(--color-background);
   }
 
   body {
