ui: create and apply default layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,29 +3,13 @@ import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
+import Layout from "../layouts/default.astro";
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body class="bg-background text-foreground">
-    <Header />
-    <main>
-      <h1>🧑 Hi, Friend!</h1>
-      <p class="bg-primary px-4">My name is <span id="name">Jose</span>.</p>
-      <ul class="my-4">
-        <li>Compagnon Roman</li>
-        <li class="font-light">Compagnon Light</li>
-        <li class="italic">Compagnon Italic</li>
-        <li class="font-bold">Compagnon Bold</li>
-        <li class="font-bold italic">Compagnon Medium</li>
-      </ul>
-    </main>
-    <Footer />
-  </body>
-</html>
+<Layout>
+  <h1>Hi, Friend!</h1>
+  <p>My name is <span id="name">Jose</span>.</p>
+</Layout>
 
 <style>
   #name {
