--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/BaseHead.astro";
-import Footer from "../components/Footer.astro";
-import FormattedDate from "../components/FormattedDate.astro";
-import Header from "../components/Header.astro";
+import Head from "../components/head.astro";
+import Footer from "../components/footer.astro";
+import FormattedDate from "../components/formatted-date.astro";
+import Navbar from "../components/navbar.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
@@ -12,8 +12,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="en">
-  <head>
-    <BaseHead title={title} description={description} />
+  <Head title={title} description={description}>
     <style>
       main {
         width: calc(100% - 2em);
@@ -53,10 +52,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         font-style: italic;
       }
     </style>
-  </head>
-
+  </Head>
   <body>
-    <Header />
+    <Navbar />
     <main>
       <article>
         <div class="hero-image">
