--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -8,8 +8,10 @@ import NavLink from "./nav-link.astro";
 import ThemeToggle from "./theme-toggle.astro";
 ---
 
-<header>
-  <nav class="container mx-auto flex items-center justify-between py-4">
+<header class="sticky top-0 z-50">
+  <nav
+    class="bg-card text-card-foreground ring-muted container mx-auto mt-4 flex items-center justify-between rounded-lg p-4 ring-1"
+  >
     <a href="/" class="flex items-center gap-1.5">
       <Image src={logo} alt="site logo" class="size-10" />
       <h1 class="text-3xl leading-0 font-bold">{USERNAME}</h1>
