--- a/src/components/nav-link.astro
+++ b/src/components/nav-link.astro
@@ -9,7 +9,15 @@ const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a
+  href={href}
+  class:list={[
+    className,
+    "transform transition-transform hover:-translate-y-1 hover:-rotate-2",
+    { active: isActive },
+  ]}
+  {...props}
+>
   <slot />
 </a>
 
@@ -17,15 +25,13 @@ const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
   a {
     display: inline-block;
     text-decoration: none;
-    color: var(--black);
     border-bottom: 4px solid transparent;
     text-decoration: none;
   }
-
   a.active {
     font-weight: bolder;
     text-decoration: underline;
     text-decoration: none;
-    border-bottom-color: var(--accent);
+    border-bottom-color: var(--color-secondary);
   }
 </style>
