--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,107 +1,26 @@
 ---
-import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
-import FormattedDate from "../../components/formatted-date.astro";
 import Layout from "../../layouts/default.astro";
+import BlogCard from "@/components/blog-card.astro";
 
 const posts = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
+
 ---
 
 <Layout>
-  <section>
-    <ul>
+  <div class="grid md:grid-cols-[3fr_minmax(275px,1fr)] gap-8">
+    <aside class="md:order-last">
+      TODO: add tags
+    </aside>
+    <section class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
       {
         posts.map((post) => (
-          <li>
-            <a href={`/blog/${post.id}/`}>
-              {post.data.heroImage && (
-                <Image
-                  width={720}
-                  height={360}
-                  src={post.data.heroImage}
-                  alt=""
-                />
-              )}
-              <h4 class="title">{post.data.title}</h4>
-              <p class="date">
-                <FormattedDate date={post.data.pubDate} />
-              </p>
-            </a>
-          </li>
+          <BlogCard postId={post.id} readingTime={post.rendered?.metadata?.frontmatter?.readingTime } wordCount={post.rendered?.metadata?.frontmatter?.wordCount} {...post.data}/>
+          
         ))
       }
-    </ul>
-  </section>
+    </section>
+  </div>
 </Layout>
-
-<style>
-  main {
-    width: 960px;
-  }
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  ul li {
-    width: calc(50% - 1rem);
-  }
-  ul li * {
-    text-decoration: none;
-    transition: 0.2s ease;
-  }
-  ul li:first-child {
-    width: 100%;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  ul li:first-child img {
-    width: 100%;
-  }
-  ul li:first-child .title {
-    font-size: 2.369rem;
-  }
-  ul li img {
-    margin-bottom: 0.5rem;
-    border-radius: 12px;
-  }
-  ul li a {
-    display: block;
-  }
-  .title {
-    margin: 0;
-    color: rgb(var(--black));
-    line-height: 1;
-  }
-  .date {
-    margin: 0;
-    color: rgb(var(--gray));
-  }
-  ul li a:hover h4,
-  ul li a:hover .date {
-    color: rgb(var(--accent));
-  }
-  ul a:hover img {
-    box-shadow: var(--box-shadow);
-  }
-  @media (max-width: 720px) {
-    ul {
-      gap: 0.5em;
-    }
-    ul li {
-      width: 100%;
-      text-align: center;
-    }
-    ul li:first-child {
-      margin-bottom: 0;
-    }
-    ul li:first-child .title {
-      font-size: 1.563em;
-    }
-  }
-</style>
