--- a/src/components/badge.astro
+++ b/src/components/badge.astro
@@ -1,6 +1,6 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-import { cva, type VariantProps } from "class-variance-authority"
+import type { HTMLAttributes } from "astro/types";
+import { cva, type VariantProps } from "class-variance-authority";
 
 const badgeVariants = cva(
   "inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden",
@@ -20,25 +20,19 @@ const badgeVariants = cva(
     defaultVariants: {
       variant: "primary",
     },
-  }
-)
+  },
+);
 
 export interface Props
-  extends HTMLAttributes<"span">,
-    VariantProps<typeof badgeVariants> {}
+  extends HTMLAttributes<"span">, VariantProps<typeof badgeVariants> {}
 
-const {
-  class: className,
-  variant,
-  ...rest
-} = Astro.props;
-
-
+const { class: className, variant, ...rest } = Astro.props;
 ---
 
-<span 
-    data-slot="badge" 
-    class:list={[badgeVariants({ variant }), className]} {...rest}
+<span
+  data-slot="badge"
+  class:list={[badgeVariants({ variant }), className]}
+  {...rest}
 >
-    <slot/>
+  <slot />
 </span>
