fix(navbar): do not allow icon to shrink in flex container

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -13,7 +13,7 @@ import ThemeToggle from "./theme-toggle.astro";
     class="bg-card text-card-foreground ring-muted flex items-center justify-between p-4 ring-1"
   >
     <a href="/" class="flex items-center gap-1.5">
-      <Image src={logo} alt="site logo" class="size-10" />
+      <Image src={logo} alt="site logo" class="size-10 shrink-0" />
       <h1 class="hidden text-3xl font-bold md:block lg:text-4xl">{USERNAME}</h1>
     </a>
     <div
