--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-  &copy; {today.getFullYear()} Your name here. All rights reserved.
+  &copy; {today.getFullYear()} Jose Gomez. All rights reserved.
   <div class="social-links">
     <a href="https://github.com/jmgogo" target="_blank">
       <span class="sr-only">Go to Jose's GitHub repo</span>
