--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -10,7 +10,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
   <Head title={SITE_TITLE} description={SITE_DESCRIPTION} />
   <body class="bg-background text-foreground">
     <Navbar />
-    <main class="container mx-auto my-8 px-2">
+    <main class="container mx-auto px-2">
       <slot />
     </main>
     <Footer />
