--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,13 +9,15 @@ const posts = (await getCollection("blog")).sort(
 ---
 
 <Layout>
-  <div class="@container/blog-posts">
+  <div
+    class="@container/blog-posts h-full min-h-[calc(100vh-var(--navbar-height)-var(--navbar-margin-top))] pt-8"
+  >
     <div
       class="grid gap-4 @3xl/blog-posts:grid-cols-[3fr_minmax(225px,1fr)] @3xl/blog-posts:gap-8"
     >
       <aside class="@3xl/blog-posts:order-last">TODO: add tags</aside>
       <section
-        class="grid items-stretch gap-4 @lg/blog-posts:grid-cols-2 @lg/blog-posts:gap-px @5xl/blog-posts:grid-cols-3"
+        class="grid place-items-center items-stretch gap-4 @lg/blog-posts:grid-cols-2 @lg/blog-posts:gap-px @5xl/blog-posts:grid-cols-3"
       >
         {
           posts.map((post) => (
