--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -2,8 +2,10 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of this component.
 import "../styles/global.css";
-import type { ImageMetadata } from "astro";
 import { SITE_TITLE } from "../consts";
+import { Font } from "astro:assets";
+
+import type { ImageMetadata } from "astro";
 
 interface Props {
   title: string;
@@ -31,42 +33,8 @@ const { title, description } = Astro.props;
   <meta name="generator" content={Astro.generator} />
 
   <!-- Font preloads -->
-  <link
-    rel="preload"
-    href="/fonts/Compagnon/Compagnon-Roman.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-  <link
-    rel="preload"
-    href="/fonts/Compagnon/Compagnon-Bold.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-  <link
-    rel="preload"
-    href="/fonts/Compagnon/Compagnon-Italic.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-  <link
-    rel="preload"
-    href="/fonts/Compagnon/Compagnon-Light.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-  <link
-    rel="preload"
-    href="/fonts/Compagnon/Compagnon-Medium.woff2"
-    as="font"
-    type="font/woff2"
-    crossorigin
-  />
-
+   <Font cssVariable="--font-compagnon" preload/>
+  
   <!-- Canonical URL -->
   <link rel="canonical" href={canonicalURL} />
 
