fix: set base route for github pages deployment

--- a/src/components/blog-card.astro
+++ b/src/components/blog-card.astro
@@ -27,7 +27,7 @@ const {
 <!-- Card -->
 <div class="ring-muted @container/card min-h-52 w-full max-w-sm ring">
   <a
-    href={`/blog/${postId}/`}
+    href={`${import.meta.env.BASE_URL}/blog/${postId}/`}
     class="bg-card text-card-foreground flex h-full w-full min-w-60 flex-col justify-between gap-6 p-4 @2xs/card:p-6"
   >
     <div class="flex flex-col items-stretch gap-4">
